// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Table /> renders bordered 1`] = `
<div
  className="responsive_wrapper_18n6f1e"
>
  <table
    className="table_1te9n79-o_O-table_bordered_1urjdog"
  >
    Bordered
  </table>
</div>
`;

exports[`<Table /> renders compact 1`] = `
<div
  className="responsive_wrapper_18n6f1e"
>
  <table
    className="table_1te9n79-o_O-table_compact_3oir43"
  >
    Compact
  </table>
</div>
`;

exports[`<Table /> renders fixed 1`] = `
<div
  className="responsive_wrapper_18n6f1e"
>
  <table
    className="table_1te9n79-o_O-table_fixed_91eznd"
  >
    Fixed
  </table>
</div>
`;

exports[`<Table /> renders horizontal 1`] = `
<div
  className="responsive_wrapper_18n6f1e"
>
  <table
    className="table_1te9n79-o_O-table_horizontal_1qi915e"
  >
    Horizontal
  </table>
</div>
`;

exports[`<Table /> renders loading 1`] = `
<div
  className="responsive_wrapper_18n6f1e"
>
  <table
    className="table_1te9n79-o_O-table_loading_e0u7o3"
  >
    Loading
  </table>
</div>
`;

exports[`<Table /> renders middleAlign 1`] = `
<div
  className="responsive_wrapper_18n6f1e"
>
  <table
    className="table_1te9n79-o_O-content_middle_align_14ilzse"
  >
    Vertical
  </table>
</div>
`;

exports[`<Table /> renders striped 1`] = `
<div
  className="responsive_wrapper_18n6f1e"
>
  <table
    className="table_1te9n79-o_O-table_striped_uvwezh"
  >
    Striped
  </table>
</div>
`;

exports[`<Table /> renders transparent 1`] = `
<div
  className="responsive_wrapper_18n6f1e"
>
  <table
    className="table_1te9n79-o_O-table_transparent_1eiqo0c"
  >
    Transparent
  </table>
</div>
`;

exports[`<Table /> renders vertical 1`] = `
<div
  className="responsive_wrapper_18n6f1e"
>
  <table
    className="table_1te9n79-o_O-table_vertical_dhjq9v"
  >
    Vertical
  </table>
</div>
`;
